--- a/ZeldaQuestTracker/Components/Pages/QuestsPages/Delete.razor
+++ b/ZeldaQuestTracker/Components/Pages/QuestsPages/Delete.razor
@@ -22,11 +22,11 @@
             <dd class="col-sm-10">@quests.Name</dd>
         </dl>
         <dl class="row">
-            <dt class="col-sm-2">Walkthrough</dt>
+            <dt class="col-sm-2">Walkthrough Link</dt>
             <dd class="col-sm-10">@quests.Walkthrough</dd>
         </dl>
         <dl class="row">
-            <dt class="col-sm-2">Video</dt>
+            <dt class="col-sm-2">Video Link</dt>
             <dd class="col-sm-10">@quests.Video</dd>
         </dl>
         <EditForm method="post" Model="quests" OnValidSubmit="DeleteQuests" FormName="delete" Enhance>
