--- a/ZeldaQuestTracker/Components/Pages/QuestsPages/Details.razor
+++ b/ZeldaQuestTracker/Components/Pages/QuestsPages/Details.razor
@@ -19,9 +19,9 @@
         <dl class="row">
             <dt class="col-sm-2">Name</dt>
             <dd class="col-sm-10">@quests.Name</dd>
-            <dt class="col-sm-2">Walkthrough</dt>
+            <dt class="col-sm-2">Walkthrough URL</dt>
             <dd class="col-sm-10"><a href="@quests.Walkthrough">@quests.Walkthrough</a></dd>
-            <dt class="col-sm-2">Video</dt>
+            <dt class="col-sm-2">Youtube URL</dt>
             <dd class="col-sm-10"><a href="@quests.Video">@quests.Video</a></dd>
         </dl>
         <div>
